[package]
name = "msir-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msir-core = { path = "../msir-core" }
rtmp = { path = "../msir-protocol/rtmp" }
httpflv = { path = "../msir-protocol/httpflv" }
thiserror = "1.0.40"
tracing = "0.1.38"
tokio = { version = "1.28.0", features = ["full"]}
uuid = { version = "1.3.2", features = ["v4"] }
rand = "0.8.5"
serde_derive = "1.0.163"
serde = "1.0.163"
prometheus = "0.13.3"
futures = { version = "0.3"}
hyper = { version = "0.14", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.15.1"