[package]
name = "msir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3"}
tokio = { version = "1.28.0", features = ["full"]}
tracing = "0.1.38"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
uuid = { version = "1.3.2", features = ["v4"] }
rtmp = { path = "../msir-protocol/rtmp/" }
msir-service = { path = "../msir-service"}
msir-core = { path = "../msir-core"}

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.15.1"
