[package]
name = "msir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3"}
tokio = { version = "1.28.0", features = ["full"]}
# tokio-metrics = "0.2.2"
tracing = "0.1.38"
anyhow = "1.0.71"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
uuid = { version = "1.3.2", features = ["v4"] }
msir-core = { path = "../msir-core" }
rtmp = { path = "../msir-protocol/rtmp/" }
msir-service = { path = "../msir-service"}
hyper = { version = "0.14", features = ["full"] }
toml = "0.7.4"
serde_derive = "1.0.163"
serde = "1.0.163"
clap = "4.3.0"
axum = "0.6.18"
