[package]
name = "rtmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
snafu = "0.7.4"
thiserror = "1.0.40"
chrono = "0.4.24"
byteorder = "1.4.3"
rand = "0.8.5"
tracing = "0.1.38"
tokio = { version = "1.28.0", features = ["full"]}
rml_amf0 = "0.3.0"
url = "2.3.1"
